rättat text samt rättat nested lists så det gick att validera.

--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="sv">
-<head> <meta charset="utf-8">
-<title>The One and Only's blogg</title>
-</head>
+    <head> <meta charset="utf-8">
+        <title>The One and Only's blogg</title>
+    </head>
 <body>
     <h1>Fakta om mig som person</h1>
         <a href="/index.html">Hem</a>
@@ -10,13 +10,40 @@
 
         <h2>Mina intressen</h2>
     <ul>
-        <li>Styrketräna</li>
+        <li>Styrketräna
             <ul>
                 <li>Tycker mer om färre reps med tyngre vikter än fler reps med lättare.</li>
             </ul>
     </ul>
-        
-                  
+    <ul>
+        <li>Gaming
+            <ul>
+                <li>Diablo3</li>
+                <li>World of Warcraft</li>
+                <li>RuneScape</li>
+                <li>Counter Strike Global Offensive</li>
+            </ul>
+    </ul>
+<br>
+    <h3>Diablo3</h3>
+        <p>I nuläget är jag fortfarande relativt ny till Diablo3 men jag lär mig snabbt hur mekaniken fungerar samtidigt som jag klättrar i färdighet rankmässigt.
+        Jag lirar främst med kompisar men också själv om situationen kräver det.
+        I fredags 28/8 släpptes season4 och då börjar man om att levla och skaffa gear från grunden.
+        Ett antal timmar in i season4 så blev jag rankad 50 bästa i EU på barbarian solo greater rift.
+        Duo lyckades jag och en polare ranka 127.</p>
+    <h3>World of Warcraft</h3>
+        <p>Tidigare lirade jag PvE både i MoP och nu i WoD.
+        Jag tröttnade p.g.a av att jag vill vara mer fri och lira vad jag vill när jag vill tillsammans med polare.
+        rankmässigt så gick det väldigt bra för mig, legat vid 97-99% bracket.
+        Vilket betyder att jag är bättre än 97-99% av de spelare som kör samma class och spec som mig på just den bossen/encounter.
+        Även också rankat under 100 dps på olika encounters.
+        Överlag hann jag aldrig nå proffsnivå eller lira med proffs eftersom jag fortfarande var rätt ny.</p>
+    <h3>RuneScape</h3>
+        <p>Lirade aldrig efter någon speciell rank eftersom jag var 14-15 år när jag lirade som mest.
+        Men det är helt klart det spelet jag haft mest kul i.</p>
+    <h3>Counter Strike Global Offensive</h3>
+        <p>Började som silver, 0.1kd per game tills nu jag nyligen rankat Legendary Eagle på ett av mina steam konton.
+        Har flertal konton med lägsta ranken Master guardian elite, osäkert när jag ska pusha Legendary Eagle Master och högre.</p>
 <br>
 <hr>
 <br>
@@ -46,24 +73,25 @@
 <hr>
 <br>
     <h2>Tidigare arbetslivserfarenhet</h2>
-        <p>Sommarjobb totalt 8 veckor, arbetsplats: Norra kyrkogården Kalmar</p>
+        <p>Sommarjobb 2 sommrar irad, arbetsplats: Norra kyrkogården Kalmar</p>
         <p>Praktik 16 veckor, praktikplats: Elbolaget Kalmar</p>
 <br>
 <hr>
 <br>
     <h2>Har jag programmerat tidigare?</h2>
-    <p>Svar ja, tidigare har jag programmerat ljusdioder i programmet Arduino.</p>
+        <p>Svar ja, tidigare har jag programmerat ljusdioder i programmet Arduino.</p>
+        <p>Mycket utav kodningen i Arduino såsom med html5 finner man spår, vilka kommandon, hur man struktuerar kodningen t.ex.</p>
 <br>
 <hr>
 <br>
     <h2>Vad fick mig att söka utbildningen Systemutvecklare.NET?</h2>
-    <p>Jag har länge inte förstått mig på kodning och jag såg min chans genom att söka utbildningen.</p>
-    <p>Jag tycker samtidigt att det är intressant att lära sig hur det går det.</p>
+        <p>Jag har länge inte förstått mig på kodning och jag såg min chans genom att söka utbildningen.</p>
+        <p>Jag tycker samtidigt att det är intressant att lära sig hur det går det.</p>
 <br>
 <hr>
 <br>
     <h2>Tankar inför framtiden?</h2>
-    <p>Att uppnå de mål jag satt framför mig och kommer sätta.</p>
+        <p>Att uppnå de mål jag satt framför mig och de mål jag kommer sätta.</p>
 <br>
 <hr>
 <br>
