började med kontakt & laborationer

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="sv">
-<head> <meta charset="utf-8">
-<title>The One and Only's blogg</title>
-</head>
+    <head> <meta charset="utf-8">
+        <title>The One and Only's blogg</title>
+    </head>
 <body>
-    <h1>Min blogg</h1>
-    <hr>
+    <h1>Hem</h1>
+        <h4>Min underbara blogg!</h4>
+            <dl>
+                <dt>
+                    <dd><a href="/index.html">Hem</a></dd>
+                    <dd><a href="/pages/presentation.html">presentation</a></dd>
+                    <dd><a href="/pages/laborationer.html">laborationer</a></dd>
+                    <dd><a href="/pages/kontakt.html">kontakt</a></dd>
+            </dl>
+<hr>
     <h2>Hej och välkommen till min fantastiska blogg</h2>
-    <p>Min blogg handlar om framförallt mig och vad jag gör</p>
-    <br>
+    <h4>Min blogg handlar om mig</h4>
+<br>
+    <p>I den här bloggen hittar du fakta om vad jag kommer syssla med under min utbildnings gång!</p>
+<br>
     <h4>Klicka gärna på länken nedan för att få veta mer om mig</h4>
     <a href="/pages/presentation.html">Om mig</a>
     
