--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -4,26 +4,33 @@
         <title>The One and Only's blogg</title>
     </head>
 <body>
-    <h1>Fakta om mig som person</h1>
-        <a href="/index.html">Hem</a>
+    <h1>Presentation</h1>
+        <h4>Fakta om mig som person m.m</h4>
+            <dl>
+                <dt>
+                    <dd><a href="/index.html">Hem</a></dd>
+                    <dd><a href="/pages/presentation.html">presentation</a></dd>
+                    <dd><a href="/pages/laborationer.html">laborationer</a></dd>
+                    <dd><a href="/pages/kontakt.html">kontakt</a></dd>
+            </dl>
 <hr>
 
-        <h2>Mina intressen</h2>
-    <ul>
-        <li>Styrketräna
-            <ul>
-                <li>Tycker mer om färre reps med tyngre vikter än fler reps med lättare.</li>
-            </ul>
-    </ul>
-    <ul>
-        <li>Gaming
-            <ul>
-                <li>Diablo3</li>
-                <li>World of Warcraft</li>
-                <li>RuneScape</li>
-                <li>Counter Strike Global Offensive</li>
-            </ul>
-    </ul>
+    <h2>Mina intressen</h2>
+        <ul>
+            <li>Styrketräna
+                <ul>
+                    <li>Tycker mer om färre reps med tyngre vikter än fler reps med lättare.</li>
+                </ul>
+        </ul>
+        <ul>
+            <li>Gaming
+                <ul>
+                    <li>Diablo3</li>
+                    <li>World of Warcraft</li>
+                    <li>RuneScape</li>
+                    <li>Counter Strike Global Offensive</li>
+                </ul>
+        </ul>
 <br>
     <h3>Diablo3</h3>
         <p>I nuläget är jag fortfarande relativt ny till Diablo3 men jag lär mig snabbt hur mekaniken fungerar samtidigt som jag klättrar i färdighet rankmässigt.
@@ -48,17 +55,22 @@
 <hr>
 <br>
     <h2>Min familj</h2>
-        <p>Jag bor hemma tillsammans med min pappa som heter Jan och min mor som heter Elisabeth.</p>
+        <p>Jag bor hemma tillsammans med min pappa som heter Jan och min mor som heter Elisabeth.
+        Jag har en syster som har eget boende.</p>
 <br>
 <hr>
 <br>
     <h2>Vad jag är bra och mindre bra på</h2>
-        <p>Vad jag är bra på</p>
-        <p>Jag är bra på att fort bli bra på datorspel och att fort förstår hur man ska bli bättre än andra.</p>
-        <p>jag är en väldigt kreativ person som ofta kommer på idéer hur man kan gå till väga för att nå sitt mål.</p>
-        <p>Helt klart är jag allmänt bäst</p>
-        <p>Vad jag är mindre bra på</p>
-        <p>Mindre bra på? Jag? Eller jo, läxor. Vilken tur jag inte läser tråkiga ämnen längre!</p>
+        <ol>
+            <li>Vad jag är bra på</li>
+            <li>Jag är bra på att fort bli bra på datorspel och att fort förstår hur man ska bli bättre än andra.</li>
+            <li>jag är en väldigt kreativ person som ofta kommer på idéer hur man kan gå till väga för att nå sitt mål.</li>
+            <li>Helt klart är jag allmänt bäst</li>
+        </ol>
+    <h2>Vad jag är mindre bra på</h2>
+        <ol>
+            <li>Mindre bra på? Jag? Eller jo, läxor. Vilken tur jag inte läser tråkiga ämnen längre!</li>
+        </ol>
 <br>
 <hr>
 <br>
