--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -10,7 +10,7 @@
                 <dt>
                     <dd><a href="/index.html">hem</a></dd>
                     <dd><a href="/pages/presentation.html">presentation</a></dd>
-                    <dd><a href="/pages/laboration.html">laboration</a></dd>
+                    <dd><a href="/pages/laborationer.html">laborationer</a></dd>
                     <dd><a href="/pages/kontakt.html">kontakt</a></dd>
             </dl>
 <hr>
