--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -4,13 +4,13 @@
         <title>The One and Only's blogg</title>
     </head>
 <body>
-    <h1>Laboration</h1>
+    <h1>Laborationer</h1>
         <h4>Lite smått & gott om mina laborationer</h4>
             <dl>
                 <dt>
                     <dd><a href="/index.html">hem</a></dd>
                     <dd><a href="/pages/presentation.html">presentation</a></dd>
-                    <dd><a href="/pages/laboration.html">laboration</a></dd>
+                    <dd><a href="/pages/laborationer.html">laborationer</a></dd>
                     <dd><a href="/pages/kontakt.html">kontakt</a></dd>
             </dl>
 <hr>
