--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -8,10 +8,10 @@
         <h4>Fakta om mig som person m.m</h4>
             <dl>
                 <dt>
-                    <dd><a href="/index.html">hem</a></dd>
-                    <dd><a href="/pages/presentation.html">presentation</a></dd>
-                    <dd><a href="/pages/laborationer.html">laborationer</a></dd>
-                    <dd><a href="/pages/kontakt.html">kontakt</a></dd>
+                    <dd><a href="index.html">hem</a></dd>
+                    <dd><a href="pages/presentation.html">presentation</a></dd>
+                    <dd><a href="pages/laborationer.html">laborationer</a></dd>
+                    <dd><a href="pages/kontakt.html">kontakt</a></dd>
             </dl>
 <hr>
 
