--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -9,9 +9,9 @@
             <dl>
                 <dt>
                     <dd><a href="index.html">hem</a></dd>
-                    <dd><a href="pages/presentation.html">presentation</a></dd>
-                    <dd><a href="pages/laborationer.html">laborationer</a></dd>
-                    <dd><a href="pages/kontakt.html">kontakt</a></dd>
+                    <dd><a href="/pages/presentation.html">presentation</a></dd>
+                    <dd><a href="/pages/laborationer.html">laborationer</a></dd>
+                    <dd><a href="/pages/kontakt.html">kontakt</a></dd>
             </dl>
 <hr>
 </body>
