--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <h4>Min underbara blogg!</h4>
             <dl>
                 <dt>
-                    <dd><a href="index.html">hem</a></dd>
-                    <dd><a href="pages/presentation.html">presentation</a></dd>
-                    <dd><a href="pages/laborationer.html">laborationer</a></dd>
-                    <dd><a href="pages/kontakt.html">kontakt</a></dd>
+                    <dd><a href="/index.html">hem</a></dd>
+                    <dd><a href="/pages/presentation.html">presentation</a></dd>
+                    <dd><a href="/pages/laborationer.html">laborationer</a></dd>
+                    <dd><a href="/pages/kontakt.html">kontakt</a></dd>
             </dl>
 <hr>
     <h2>Hej och välkommen till min fantastiska blogg</h2>
