added questions with answer

--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -8,11 +8,42 @@
         <h4>Lite smått & gott om mina laborationer</h4>
             <dl>
                 <dt>
-                    <dd><a href="index.html">hem</a></dd>
-                    <dd><a href="pages/presentation.html">presentation</a></dd>
-                    <dd><a href="pages/laborationer.html">laborationer</a></dd>
-                    <dd><a href="pages/kontakt.html">kontakt</a></dd>
+                    <dd><a href="/index.html">hem</a></dd>
+                    <dd><a href="/pages/presentation.html">presentation</a></dd>
+                    <dd><a href="/pages/laborationer.html">laborationer</a></dd>
+                    <dd><a href="/pages/kontakt.html">kontakt</a></dd>
             </dl>
 <hr>
+    <h2>Webbproduktion</h2>
+        <ul>
+            <li><a href="#Laborationsuppgift1">Laboration 1</a></li>
+        </ul>
+<hr>
+    <h2><a id="Laborationsuppgift1">Laboration 1</a></h2>
+        <p>Uppgifter:</p>
+        <ol>
+            <li>Absoluta/Relativa sökvägar
+                <ol type="a">
+                    <li>1.4.1. Vilken är den absoluta sökvägen till filen bottom.html?</li>
+                    <li>1.4.2. Vilken är den relativa sökvägen från filen default.html till filen top.html?</li>
+                    <li>1.4.3. Vilken är den relativa sökvägen från filen bottom.html till filen index.html?</li>
+                    <li>1.4.4. Vilken är den absoluta sökvägen till filen index.html?</li>
+                    <li>1.4.5. Vilken är den relativa sökvägen från filen top.html till bottom.html?</li>
+                    <li>1.4.6. Vilken är den relativa sökvägen från filen index.html till top.html?
+                </ol>
+        </ol>
+<br>
+<ol>
+            <li>Svar: Absoluta/Relativa sökvägar
+                <ol type="a">
+                    <li>1.4.1. http://www.server.se/html/pages/bottom.html</li>
+                    <li>1.4.2. /pages/top.html</li>
+                    <li>1.4.3. /index.html</li>
+                    <li>1.4.4. http://www.server.se/index.html</li>
+                    <li>1.4.5. /pages/bottom.html</li>
+                    <li>1.4.6. /html/pages/top.html
+                </ol>
+        </ol>
+    
 </body>
 </html>
