--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -31,6 +31,9 @@
                     <li>Counter Strike Global Offensive</li>
                 </ul>
         </ul>
+    <a href="http://eu.battle.net/en/" target="_blank">Diablo3, WoW</a> <p></p>
+    <a href="http://www.runescape.com" target="_blank">Runescape</a> <p></p>
+    <a href="http://store.steampowered.com/" target="_blank">CS GO</a> <p></p>
 <br>
     <h3>Diablo3</h3>
         <p>I nuläget är jag fortfarande relativt ny till Diablo3 men jag lär mig snabbt hur mekaniken fungerar samtidigt som jag klättrar i färdighet rankmässigt.
@@ -81,6 +84,7 @@
         <p>Gymnasie årskurs 1, el-energiprogrammet Lars Kaggskolan</p>
         <p>Gymnasie årskurs 2-3, inriktning Data-kommunikationsteknik Lars Kaggskolan</p>
         <p>Gymnasiet, Liftutbildning för saxlift & bomlift</p>
+<a href="http://www.gyf.se/larskaggskolan/" target="_blank">Lars Kaggskolan</a>        
 <br>
 <hr>
 <br>
@@ -93,6 +97,7 @@
     <h2>Har jag programmerat tidigare?</h2>
         <p>Svar ja, tidigare har jag programmerat ljusdioder i programmet Arduino.</p>
         <p>Mycket utav kodningen i Arduino såsom med html5 finner man spår, vilka kommandon, hur man struktuerar kodningen t.ex.</p>
+<a href="https://www.arduino.cc/" target="_blank">Arduino</a>
 <br>
 <hr>
 <br>
