added .png .jpg pics

--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -44,6 +44,10 @@
                     <li>1.4.6. /html/pages/top.html
                 </ol>
         </ol>
-    
+<a href="/pics/aa.png" target="_blank">Min loga</a>
+<p></p>
+<a href="/pages/presentation.html#lol">Bild på mig på en annan sida</a>
+
+
 </body>
 </html>
