--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="sv">
     <head> <meta charset="utf-8">
         <title>The One and Only's blogg</title>
-    </head>
+<style>
+    body {
+        
+        background-size: 807px 208px;
+        background-image: url(/pics/aa.png);
+        background-repeat: no-repeat;
+    }
+</style>
+</head>
 <body>
     <h1>Hem</h1>
         <h4>Min underbara blogg!</h4>
