--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -33,7 +33,7 @@
                 </ol>
         </ol>
 <br>
-<ol>
+        <ol>
             <li>Svar: Absoluta/Relativa sökvägar
                 <ol type="a">
                     <li>1.4.1. http://www.server.se/html/pages/bottom.html</li>
@@ -44,9 +44,20 @@
                     <li>1.4.6. /html/pages/top.html
                 </ol>
         </ol>
-<a href="/pics/aa.png" target="_blank">Min loga</a>
+    <a href="/pics/aa.png" target="_blank">Min loga</a>
 <p></p>
-<a href="/pages/presentation.html#lol">Bild på mig på en annan sida</a>
+    <a href="/pages/presentation.html#lol">Bild på mig på en annan sida</a>
+        <dl>
+            <dt>
+                <dd>Uppgift1.6</dd>
+            </dt>
+        </dl>
+    <ol>
+        <li>Uppgift 1.7</li>
+            <ol type="a">
+                <li><a href="/index.html#video">Video</a>
+            </ol>
+    </ol>
 
 
 </body>
