--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -113,7 +113,7 @@
 <hr>
 <br>
     <!-- Bilder på mig, men den här kommentaren ser du inte. Inte om du inte letar efter mig! -->
-    <h2 id="lol"></h2>
+    <div id="lol"></div>
     <img src="/pics/IMG_0046.JPG" alt="Bild på mig" style="width:250px;height:450px;">
     
     
