updated and completed 1.8, tables

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <br>
     <p>I den här bloggen hittar du fakta om vad jag kommer syssla med under min utbildnings gång!</p>
 <br>
+    <div id="vektor"></div>
+    <img src="/pics/harry.svg">
     <div id="video"></div>
     <video width="600" controls>
         <source src="/videos/The ace.mp4" type="video/mp4">
