--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -2,6 +2,7 @@
 <html lang="sv">
     <head> <meta charset="utf-8">
         <title>The One and Only's blogg</title>
+    <link rel="stylesheet" type="text/css" href="/css/table.css">
     </head>
 <body>
     <h1>Laborationer</h1>
@@ -37,27 +38,107 @@
             <li>Svar: Absoluta/Relativa sökvägar
                 <ol type="a">
                     <li>1.4.1. http://www.server.se/html/pages/bottom.html</li>
-                    <li>1.4.2. /pages/top.html</li>
+                    <li>1.4.2. /html/pages/top.html</li>
                     <li>1.4.3. /index.html</li>
                     <li>1.4.4. http://www.server.se/index.html</li>
-                    <li>1.4.5. /pages/bottom.html</li>
+                    <li>1.4.5. /html/pages/bottom.html</li>
                     <li>1.4.6. /html/pages/top.html
                 </ol>
         </ol>
-    <a href="/pics/aa.png" target="_blank">Min loga</a>
+        <ul>
+            <a href="/pics/aa.png" target="_blank">Min loga</a>
+        </ul>
 <p></p>
-    <a href="/pages/presentation.html#lol">Bild på mig på en annan sida</a>
+        <ul>
+            <a href="/pages/presentation.html#lol">Bild på mig på en annan sida</a>
+        </ul>
         <dl>
             <dt>
                 <dd>Uppgift1.6</dd>
-            </dt>
+                <dd><a href="/index.html">Min fantastiska vektorbild</a></dd>
         </dl>
     <ol>
-        <li>Uppgift 1.7</li>
+        <li>Uppgift 1.7
             <ol type="a">
                 <li><a href="/index.html#video">Video</a>
             </ol>
     </ol>
+<br>
+    <table>
+        <caption>Resultat</caption>
+        <thead>
+            <tr>
+                <td><strong>Laboration</strong></td>
+                <td><strong>Uppgift</strong></td>
+                <td><strong>status</strong></td>
+                <td><strong>Redovisad</strong></td>
+            </tr>
+        </thead>
+        <tfoot> 
+            <tr>
+                <td colspan="4">Laborations resultat gällande Erik Petersson</td>
+            </tr>
+        </tfoot>
+        <tbody>
+            <tr>
+                <td rowspan="11">1</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>färdig</td>
+                <td>ej redovisad</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>färdig</td>
+                <td>ej redovisad</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>färdig</td>
+                <td>ej redovisad</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>färdig</td>
+                <td>ej redovisad</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>färdig</td>
+                <td>ej redovisad</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>färdig</td>
+                <td>ej redovisad</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>färdig</td>
+                <td>ej redovisad</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>färdig</td>
+                <td>ej redovisad</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>ej färdig</td>
+                <td>ej redovisad</td>
+            </tr>
+            <tr>
+                <td>extra</td>
+                <td>ej påbörjad</td>
+                <td>ej redovisad</td>
+            </tr>
+        </tbody>
+    </table>
+
+
+
+
 
 
 </body>
