--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -1,59 +1,66 @@
 <!DOCTYPE html>
 <html lang="sv">
-    <head> <meta charset="utf-8">
-        <title>The One and Only's blogg</title>
+
+<head>
+    <meta charset="utf-8">
+    <title>The One and Only's blogg</title>
     <link rel="stylesheet" type="text/css" href="/css/table.css">
-    </head>
+</head>
+
 <body>
-    <h1>Laborationer</h1>
-        <h4>Lite smått & gott om mina laborationer</h4>
+    <div=”container”>
+        <div id=”header”>
+            <ul>
+                <li><a href="/index.html">hem</a></li>
+                <li><a href="/pages/presentation.html">presentation</a></li>
+                <li><a href="/pages/laborationer.html">laborationer</a></li>
+                <li><a href="/pages/kontakt.html">kontakt</a></li>
+            </ul>
+        </div>
+        <div id=”container”>
+            <h1>Laborationer</h1>
+            <h4>Lite smått & gott om mina laborationer</h4>
+
+            <hr>
+            <h2>Webbproduktion</h2>
+            <ul>
+                <li><a href="#Laborationsuppgift1">Laboration 1</a></li>
+            </ul>
+            <hr>
+            <h2><a id="Laborationsuppgift1">Laboration 1</a></h2>
+            <p>Uppgifter:</p>
+            <ol>
+                <li>Absoluta/Relativa sökvägar
+                    <ol type="a">
+                        <li>1.4.1. Vilken är den absoluta sökvägen till filen bottom.html?</li>
+                        <li>1.4.2. Vilken är den relativa sökvägen från filen default.html till filen top.html?</li>
+                        <li>1.4.3. Vilken är den relativa sökvägen från filen bottom.html till filen index.html?</li>
+                        <li>1.4.4. Vilken är den absoluta sökvägen till filen index.html?</li>
+                        <li>1.4.5. Vilken är den relativa sökvägen från filen top.html till bottom.html?</li>
+                        <li>1.4.6. Vilken är den relativa sökvägen från filen index.html till top.html?
+                    </ol>
+            </ol>
+            <br>
+            <ol>
+                <li>Svar: Absoluta/Relativa sökvägar
+                    <ol type="a">
+                        <li>1.4.1. http://www.server.se/html/pages/bottom.html</li>
+                        <li>1.4.2. /html/pages/top.html</li>
+                        <li>1.4.3. /index.html</li>
+                        <li>1.4.4. http://www.server.se/index.html</li>
+                        <li>1.4.5. /html/pages/bottom.html</li>
+                        <li>1.4.6. /html/pages/top.html
+                    </ol>
+            </ol>
+            <ul>
+                <a href="/pics/aa.png" target="_blank">Min loga</a>
+            </ul>
+            <p></p>
+            <ul>
+                <a href="/pages/presentation.html#lol">Bild på mig</a>
+            </ul>
             <dl>
                 <dt>
-                    <dd><a href="/index.html">hem</a></dd>
-                    <dd><a href="/pages/presentation.html">presentation</a></dd>
-                    <dd><a href="/pages/laborationer.html">laborationer</a></dd>
-                    <dd><a href="/pages/kontakt.html">kontakt</a></dd>
-            </dl>
-<hr>
-    <h2>Webbproduktion</h2>
-        <ul>
-            <li><a href="#Laborationsuppgift1">Laboration 1</a></li>
-        </ul>
-<hr>
-    <h2><a id="Laborationsuppgift1">Laboration 1</a></h2>
-        <p>Uppgifter:</p>
-        <ol>
-            <li>Absoluta/Relativa sökvägar
-                <ol type="a">
-                    <li>1.4.1. Vilken är den absoluta sökvägen till filen bottom.html?</li>
-                    <li>1.4.2. Vilken är den relativa sökvägen från filen default.html till filen top.html?</li>
-                    <li>1.4.3. Vilken är den relativa sökvägen från filen bottom.html till filen index.html?</li>
-                    <li>1.4.4. Vilken är den absoluta sökvägen till filen index.html?</li>
-                    <li>1.4.5. Vilken är den relativa sökvägen från filen top.html till bottom.html?</li>
-                    <li>1.4.6. Vilken är den relativa sökvägen från filen index.html till top.html?
-                </ol>
-        </ol>
-<br>
-        <ol>
-            <li>Svar: Absoluta/Relativa sökvägar
-                <ol type="a">
-                    <li>1.4.1. http://www.server.se/html/pages/bottom.html</li>
-                    <li>1.4.2. /html/pages/top.html</li>
-                    <li>1.4.3. /index.html</li>
-                    <li>1.4.4. http://www.server.se/index.html</li>
-                    <li>1.4.5. /html/pages/bottom.html</li>
-                    <li>1.4.6. /html/pages/top.html
-                </ol>
-        </ol>
-        <ul>
-            <a href="/pics/aa.png" target="_blank">Min loga</a>
-        </ul>
-<p></p>
-        <ul>
-            <a href="/pages/presentation.html#lol">Bild på mig på en annan sida</a>
-        </ul>
-        <dl>
-            <dt>
                 <dd>Uppgift1.6</dd>
                 <dd><a href="/index.html">Min fantastiska vektorbild</a></dd>
         </dl>
@@ -135,11 +142,9 @@
             </tr>
         </tbody>
     </table>
-
-
-
-
-
-
+		</div>
+			<div id=”footer”>Skrivet av Erik Petersson</div>
+</div>
+    
 </body>
 </html>
